--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,7 +126,7 @@
                     <h4 class="modal-title">Update Transaction</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="update-savingstracker-form" class="update-savingstracker-form hide">
+                    <form id="update-savingstracker-form" class="update-savingstracker-form">
                         <div id="fieldsContainer">
                             <div class="form-group">
                                 <select name="categoryId" class="form-control category-field" onchange="loadSubCategories(this)" required>
