--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,18 +86,18 @@
                         </div>
                         <div class="form-group new-sub-category-check">
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="new_site_check" class="new-sub-category-checkbox">New Sub Category
+                                <input type="checkbox" name="new_sub_category_check" class="new-sub-category-checkbox">New Sub Category
                             </label>
                         </div>
                         <div class="form-group new-sub-category-form-group hide">
                             <input type="text" name="newSubCategory" class="form-control new-sub-category-field" placeholder="New Sub Category">
                         </div>
-                        <div class="form-group existing-sub-category-form-group">
+                        <div class="form-group existing-sub-category-form-group primary-sub-category-form-group">
                             <select name="primarySubCategoryId" class="form-control sub-category-field" select-text="primary">
                                 <option value="">Select Sub Category</option>
                             </select>
                         </div>
-                        <div class="form-group from-drop-down hide">
+                        <div class="form-group from-drop-down hide secondary-sub-category-form-group">
                             <select name="secondarySubCategoryId" class="form-control sub-category-field" select-text="secondary">
                                 <option value="">Select From</option>
                             </select>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary" id="submit-btn">Submit</button>
-                    <button type="button" class="btn btn-default" onclick="onCancelClick(this);">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 </form>
             </div>
             </div>
@@ -150,7 +150,7 @@
                             <input type="hidden" name="savingstracker_id" class="savingstracker-id-field">
                         </div>
                         <button type="submit" class="btn btn-primary" id="update-btn">Update</button>
-                        <button type="button" class="btn btn-default" onclick="cancelUpdateTransaction(this);">Cancel</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     </form>
                 </div>
             </div>
