--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,12 +56,18 @@
             
         </div>
     </div>
-    <div class="row">
+    <div class="row search-input">
+        <div class="col-xs-12">
+            <input type="text" name="search" id="search" placeholder="Search" onkeyup="searchTable()">
+            <button type="button" class="btn btn-primary btn-xs" onclick="document.getElementById('search').value = '';searchTable();">Clear</button>
+        </div>
+    </div>
+    <!-- <div class="row">
         <div class="form-group">
             <input type="text" name="search" id="search" placeholder="Search" onkeyup="searchTable()">
             <button type="button" onclick="document.getElementById('search').value = '';searchTable();">Clear</button>
         </div>
-    </div>
+    </div> -->
     <div class="table-responsive">
         <table class="table table-bordered savingstrackers-table">
             <tbody id="savingstrackers"></tbody>
